fix(TDP-3874): find and group dialog visual glitches also fixed an issue with checkboxes on ie

--- a/dataprep-webapp/src/app/components/transformation/form/cluster/_transformation-cluster-params.scss
+++ b/dataprep-webapp/src/app/components/transformation/form/cluster/_transformation-cluster-params.scss
@@ -100,6 +100,11 @@
 			th {
 				@include column-border($border-color);
 				padding: $cell-vertical-space $cell-horizontal-space;
+
+				.checkbox {
+					border-collapse: separate;
+					margin-bottom: 0px;
+				}
 			}
 		}
 
